// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a ReminderCard component When invoques PlantCard function Then PlantCard component renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#93B1A7",
      "borderRadius": 10,
      "borderWidth": 2,
      "flexDirection": "row",
      "height": 150,
      "justifyContent": "space-evenly",
      "marginLeft": 20,
      "marginVertical": 10,
      "width": 350,
    }
  }
>
  <Image
    source={
      Object {
        "uri": undefined,
      }
    }
    style={
      Object {
        "backgroundColor": "#E5E5E5",
        "borderRadius": 10,
        "height": 100,
        "width": 100,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "width": 150,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginVertical": 10,
          "width": 170,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "bold",
            "marginHorizontal": 20,
          }
        }
      />
      <Text
        style={
          Object {
            "fontSize": 18,
            "marginHorizontal": 20,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginVertical": 10,
          "width": 170,
        }
      }
    />
  </View>
</View>
`;

exports[`Given a ReminderCard component, When ReminderCard function is invoked, Then PlantCard component renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#93B1A7",
      "borderRadius": 10,
      "borderWidth": 2,
      "flexDirection": "row",
      "height": 150,
      "justifyContent": "space-evenly",
      "marginLeft": 20,
      "marginVertical": 10,
      "width": 350,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "img.com",
      }
    }
    style={
      Object {
        "backgroundColor": "#E5E5E5",
        "borderRadius": 10,
        "height": 100,
        "width": 100,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "width": 150,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginVertical": 10,
          "width": 170,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "bold",
            "marginHorizontal": 20,
          }
        }
      >
        kentia
      </Text>
      <Text
        style={
          Object {
            "fontSize": 18,
            "marginHorizontal": 20,
          }
        }
      >
        bedroom
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginVertical": 10,
          "width": 170,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/icons/water24.png",
          }
        }
      />
      <Image
        source={
          Object {
            "testUri": "../../../src/icons/mist24.png",
          }
        }
      />
      <Image
        source={
          Object {
            "testUri": "../../../src/icons/settings24.png",
          }
        }
      />
    </View>
  </View>
</View>
`;
